--- a/index.html
+++ b/index.html
@@ -214,10 +214,11 @@
           </div>
         </div>
         <div class="content-section section--hidden" data-page="1">
-          <h1 class="content-section__title">ABOUT US</h1>
-          <p class="content-section__text">Bancannabis is the digital community of cannabis, we seek the integration of all participants in the productive
-             cycle of cannabis through innovative and decentralized solutions. Our Initiative is to raise awareness and unban the use of cannabis in all its forms.
-            We are <span class="emphasize">Bancannabis Community</span></p>
+          <h1 class="content-section__title">Nosotros</h1>
+          <p class="content-section__text">Bancannabis es la comunidad digital del cannabis, buscamos la integración de todos los partícipes del ciclo productivo
+            del cannabis a través de soluciones innovadoras y descentralizadas. Bancannabis es una iniciativa que promueve la regularización y la concientización 
+            del uso y la explotación del Cannabis en todas sus formas.
+            Somos <span class="emphasize">Bancannabis Community</span></p>
           <button class="content-section__button button button--icon" id="button_video">
             <img class="button__image" src="./resources/images/icons/play.svg" alt="Play icon"/>
             <span class="button__text">WATCH VIDEO</span>
